--- a/WpfApp1/packages.config
+++ b/WpfApp1/packages.config
@@ -2,4 +2,10 @@
 <packages>
   <package id="EntityFramework" version="6.2.0" targetFramework="net48" />
   <package id="EntityFramework.ru" version="6.2.0" targetFramework="net48" />
+  <package id="Microsoft.CodeCoverage" version="17.10.0" targetFramework="net48" />
+  <package id="Microsoft.NET.Test.Sdk" version="17.10.0" targetFramework="net48" />
+  <package id="NUnit" version="4.1.0" targetFramework="net48" />
+  <package id="NUnit3TestAdapter" version="4.5.0" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
 </packages>
